--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -523,10 +523,6 @@
 															<div class="inline_div left hidden-xs">
 																<img src="{{ asset('img/system/defaults/new_ES.png') }}" alt="" class="btn_right_arrow_spe_2"/>
 															</div>
-														{% else %}
-															<div class="inline_div left hidden-xs">
-																<img src="{{ asset('img/system/defaults/new_ES.png') }}" alt="" class="btn_right_arrow_spe_2" style="opacity:0 !important;"/>
-															</div>
 														{% endif %}
 														<div class="inline_div">
 															<a href="" data-toggle="tab" data-target="#tab_{{ index_general }}-{{ index_category }}" class="btn btn-choice">
@@ -563,9 +559,11 @@
 															<div class="row product_info_xs">
 																<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 																	<div class="product_img_div">
+																	{% if product.active != 'new' %}
 																		<div class="float-right" style="width:36%;">
 																			<img src="{{ asset('img/system/defaults/new_ES.png') }}" alt="New" style="width:100%;"/>
 																		</div>
+																	{% endif %}
 																	{% if product.webPath|length > 0 %}
 																		<div class="product_img" style="width: 100%; background-image: url('{{ asset(product.webPath) }}'); background-size: cover; background-position: 50%;">
 																			<!-- onClick="showPhoto('{{ product.id }}')" -->
@@ -610,11 +608,6 @@
 																</div>
 																<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 																	<div class="row product_description">
-																		{% if product.active == 'new' %}
-																			{% set newsOnThePage = 'yes' %}
-																			{% set generalIdNew = index_category %}
-																			{% set categoryIdNew = category %}
-																		{% endif %}
 																		<h4>
 																			{% if current_language %}
 																				{% if current_language == 'fr' and product.nameFr|length > 0 %}
