--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -560,7 +560,7 @@
 																<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 																	<div class="product_img_div">
 																	{% if product.active == 'new' %}
-																		<div class="float-right" style="width:36%;">
+																		<div class="float-right" style="width:36%; position:relative; top: -10px; right: -10px;">
 																			<img src="{{ asset('img/system/defaults/new_ES.png') }}" alt="New" style="width:100%;"/>
 																		</div>
 																	{% endif %}
