error for chrome

--- a/src/LBF/AdminBundle/Resources/views/Admin/newElement.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/newElement.html.twig
@@ -90,8 +90,7 @@
 										                {% endif %}
 														<div class="input-icon">
 												        	{% set opt_nameEs = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Nombre (Ex: Chorizo de Cerdo)', 'id':'nameEs', 
-												        		'name':'_nameEs'}} %}
+												        		'type':'text', 'placeholder':'Nombre (Ex: Chorizo de Cerdo)', 'id':'nameEs'}} %}
 												        	{{ form_widget(formElement.nameEs, opt_nameEs) }}
 												        </div>
 													</div>
@@ -110,8 +109,7 @@
 										                {% endif %}
 														<div class="input-icon">
 												        	{% set opt_descriptionEs = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Descripción (5 lineas)', 'id':'descriptionEs', 
-												        		'name':'_descriptionEs'}} %}
+												        		'type':'text', 'placeholder':'Descripción (5 lineas)', 'id':'descriptionEs'}} %}
 												        	{{ form_widget(formElement.descriptionEs, opt_descriptionEs) }}
 												        </div>
 													</div>
@@ -133,8 +131,7 @@
 										                {% endif %}
 														<div class="input-icon">
 												        	{% set opt_nameFr = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Nom (Ex: Chorizo de Cerdo)', 'id':'nameFr', 
-												        		'name':'_nameFr'}} %}
+												        		'type':'text', 'placeholder':'Nom (Ex: Chorizo de Cerdo)', 'id':'nameFr'}} %}
 												        	{{ form_widget(formElement.nameFr, opt_nameFr) }}
 												        </div>
 													</div>
@@ -153,8 +150,7 @@
 										                {% endif %}
 														<div class="input-icon">
 												        	{% set opt_descriptionFr = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Brêve description (5 lignes)', 'id':'descriptionFr', 
-												        		'name':'_descriptionFr'}} %}
+												        		'type':'text', 'placeholder':'Brêve description (5 lignes)', 'id':'descriptionFr'}} %}
 												        	{{ form_widget(formElement.descriptionFr, opt_descriptionFr) }}
 												        </div>
 													</div>
@@ -176,8 +172,7 @@
 										                {% endif %}
 														<div class="input-icon">
 												        	{% set opt_nameEn = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Name (Ex: Pig sausage)', 'id':'nameEn', 
-												        		'name':'_nameEn'}} %}
+												        		'type':'text', 'placeholder':'Name (Ex: Pig sausage)', 'id':'nameEn'}} %}
 												        	{{ form_widget(formElement.nameEn, opt_nameEn) }}
 												        </div>
 													</div>
@@ -196,8 +191,7 @@
 										                {% endif %}
 														<div class="input-icon">
 												        	{% set opt_descriptionEn = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Short description (5 lines)', 'id':'descriptionEn', 
-												        		'name':'_descriptionEn'}} %}
+												        		'type':'text', 'placeholder':'Short description (5 lines)', 'id':'descriptionEn'}} %}
 												        	{{ form_widget(formElement.descriptionEn, opt_descriptionEn) }}
 												        </div>
 													</div>
