--- a/src/LBF/AdminBundle/Resources/views/Admin/newRecipe.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/newRecipe.html.twig
@@ -397,7 +397,8 @@
 										<div class="form-group col-lg-6 col-md-8 col-sm-12 col-xs-12 row">
 											{{ form_errors(formRecipe) }}
 											<div class="input-icon left">
-									        	Image de la recette (recommandé): {{ form_widget(formRecipe.file) }}
+									        	Image de la recette (recommandé): 
+									        	{{ form_widget(formRecipe.file) }}
 									        </div>
 										</div>
 					                </div>
